deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        # Use the ECR repository URI here
        image: <your-repository-uri>:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
