service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  # This tells AWS to create an external load balancer
  type: LoadBalancer
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80 # The load balancer will listen on port 80
      targetPort: 4499 # And forward traffic to the container's port
